[package]
name = "loudgainer"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Build ffmpeg instead of using the host's.
build-ffmpeg = ["ffmpeg-next/build"]
ffmpeg-static = ["ffmpeg-next/static"]

[dependencies]
#clap = { version = "3", features = ["derive"] }
gumdrop = { version = "0.8", features = ["default_expr"] }
log = "0.4"
thiserror = "1.0"
infer = "0.9"
# Taggers
metaflac = "0.2"
id3 = "1"
lofty = "0.7"
# audio Fillers
claxon = "0.4"
symphonia = { version="0.5", features = ["mp3", "aac", "alac", "isomp4"] }
ffmpeg-next = "5.0.3"
# RG
ebur128 = "0.1"